字典账号管理

--- a/.env.production
+++ b/.env.production
@@ -6,3 +6,5 @@ VUE_APP_TITLE = PaiAdmin
 
 # 接口地址
 VUE_APP_API_BASEURL = https://www.fastmock.site/mock/5039c4361c39a7e3252c5b55971f1bd3/api
+
+VUE_APP_ASSET_URL = http://localhost:8080/
