--- a/.env.development
+++ b/.env.development
@@ -7,6 +7,8 @@ VUE_APP_TITLE = PaiAdmin
 # 接口地址
 VUE_APP_API_BASEURL = http://localhost:8080/admin
 
+VUE_APP_ASSET_URL = http://localhost:8080/
+
 # 本地端口
 VUE_APP_PORT = 2800
 
