--- a/.env.development
+++ b/.env.development
@@ -1,16 +1,18 @@
 # 本地环境
-NODE_ENV = development
+NODE_ENV=development
 
 # 标题
-VUE_APP_TITLE = PaiAdmin
+VUE_APP_TITLE=PaiAdmin
 
 # 接口地址
-VUE_APP_API_BASEURL = http://localhost:8080/admin
+VUE_APP_API_BASEURL=http://api1.gocli.run/admin
+VUE_APP_ASSET_URL=http://api1.gocli.run/
 
-VUE_APP_ASSET_URL = http://localhost:8080/
+#VUE_APP_API_BASEURL=http://localhost:8080/admin
+#VUE_APP_ASSET_URL=http://localhost:8080/
 
 # 本地端口
-VUE_APP_PORT = 2800
+VUE_APP_PORT=2800
 
 # 是否开启代理
-VUE_APP_PROXY = true
+VUE_APP_PROXY=true
