--- a/.env.production
+++ b/.env.production
@@ -1,10 +1,9 @@
 # 生产环境
-NODE_ENV = production
+NODE_ENV=production
 
 # 标题
-VUE_APP_TITLE = PaiAdmin
+VUE_APP_TITLE=PaiAdmin
 
 # 接口地址
-VUE_APP_API_BASEURL = https://www.fastmock.site/mock/5039c4361c39a7e3252c5b55971f1bd3/api
-
-VUE_APP_ASSET_URL = http://localhost:8080/
+VUE_APP_API_BASEURL=/api
+VUE_APP_ASSET_URL=http://api1.gocli.run/
