--- a/.env.development
+++ b/.env.development
@@ -5,11 +5,11 @@ NODE_ENV=development
 VUE_APP_TITLE=PaiAdmin
 
 # 接口地址
-VUE_APP_API_BASEURL=http://api1.gocli.run/admin
-VUE_APP_ASSET_URL=http://api1.gocli.run/
+#VUE_APP_API_BASEURL=http://api1.gocli.run/admin
+#VUE_APP_ASSET_URL=http://api1.gocli.run/
 
-#VUE_APP_API_BASEURL=http://localhost:8080/admin
-#VUE_APP_ASSET_URL=http://localhost:8080/
+VUE_APP_API_BASEURL=http://test2.com/admin
+VUE_APP_ASSET_URL=http://test2.com/
 
 # 本地端口
 VUE_APP_PORT=2800
